--- a/src/app/components/layout/home/home.component.css
+++ b/src/app/components/layout/home/home.component.css
@@ -5,3 +5,12 @@
 .align-midle {
     flex: content;
 }
+
+/* .container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+} */
